Java 9. Moved some util to commons