@@ -15,21 +15,13 @@
  */
 package org.sejda.io.util;
 
-import static java.lang.invoke.MethodHandles.constant;
-import static java.lang.invoke.MethodHandles.dropArguments;
-import static java.lang.invoke.MethodHandles.filterReturnValue;
-import static java.lang.invoke.MethodHandles.guardWithTest;
 import static java.lang.invoke.MethodHandles.lookup;
 import static java.lang.invoke.MethodType.methodType;
 import static java.util.Objects.nonNull;
 
-import java.io.Closeable;
-import java.io.IOException;
-import java.io.InputStream;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
@@ -37,7 +29,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Consumer;
 
-import org.sejda.io.FastByteArrayOutputStream;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -56,46 +47,6 @@ public final class IOUtils {
 
     private IOUtils() {
         // hide
-    }
-
-    /**
-     * Null safe close of the given {@link Closeable}.
-     *
-     * @param closeable
-     *            to be closed
-     * @throws IOException
-     */
-    public static void close(Closeable closeable) throws IOException {
-        if (closeable != null) {
-            closeable.close();
-        }
-    }
-
-    /**
-     * Null safe close of the given {@link Closeable} suppressing any exception.
-     *
-     * @param closeable
-     *            to be closed
-     */
-    public static void closeQuietly(Closeable closeable) {
-        try {
-            if (closeable != null) {
-                closeable.close();
-            }
-        } catch (IOException ioe) {
-            LOG.warn("An error occured while closing a Closeable resource", ioe);
-        }
-    }
-
-    /**
-     * @param input
-     * @return the content of the input stream as a byte[]
-     * @throws IOException
-     */
-    public static byte[] toByteArray(InputStream input) throws IOException {
-        FastByteArrayOutputStream output = new FastByteArrayOutputStream();
-        input.transferTo(output);
-        return output.toByteArray();
     }
 
     /**
@@ -121,44 +72,17 @@ public final class IOUtils {
     private static Consumer<ByteBuffer> unmapper() {
         final Lookup lookup = lookup();
         try {
-            try {
-                // *** sun.misc.Unsafe unmapping (Java 9+) ***
-                final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
-                // first check if Unsafe has the right method, otherwise we can give up
-                // without doing any security critical stuff:
-                final MethodHandle unmapper = lookup.findVirtual(unsafeClass, "invokeCleaner",
-                        methodType(void.class, ByteBuffer.class));
-                // fetch the unsafe instance and bind it to the virtual MH:
-                final Field f = unsafeClass.getDeclaredField("theUnsafe");
-                f.setAccessible(true);
-                final Object theUnsafe = f.get(null);
-                return newBufferCleaner(ByteBuffer.class, unmapper.bindTo(theUnsafe));
-            } catch (SecurityException se) {
-                // rethrow to report errors correctly (we need to catch it here, as we also catch RuntimeException below!):
-                throw se;
-            } catch (ReflectiveOperationException | RuntimeException e) {
-                // *** sun.misc.Cleaner unmapping (Java 8) ***
-                final Class<?> directBufferClass = Class.forName("java.nio.DirectByteBuffer");
-
-                final Method m = directBufferClass.getMethod("cleaner");
-                m.setAccessible(true);
-                final MethodHandle directBufferCleanerMethod = lookup.unreflect(m);
-                final Class<?> cleanerClass = directBufferCleanerMethod.type().returnType();
-
-                /*
-                 * "Compile" a MH that basically is equivalent to the following code: void unmapper(ByteBuffer byteBuffer) { sun.misc.Cleaner cleaner = ((java.nio.DirectByteBuffer)
-                 * byteBuffer).cleaner(); if (Objects.nonNull(cleaner)) { cleaner.clean(); } else { noop(cleaner); // the noop is needed because MethodHandles#guardWithTest always
-                 * needs ELSE } }
-                 */
-                final MethodHandle cleanMethod = lookup.findVirtual(cleanerClass, "clean", methodType(void.class));
-                final MethodHandle nonNullTest = lookup.findStatic(Objects.class, "nonNull",
-                        methodType(boolean.class, Object.class)).asType(methodType(boolean.class, cleanerClass));
-                final MethodHandle noop = dropArguments(constant(Void.class, null).asType(methodType(void.class)), 0,
-                        cleanerClass);
-                final MethodHandle unmapper = filterReturnValue(directBufferCleanerMethod,
-                        guardWithTest(nonNullTest, cleanMethod, noop)).asType(methodType(void.class, ByteBuffer.class));
-                return newBufferCleaner(directBufferClass, unmapper);
-            }
+            // *** sun.misc.Unsafe unmapping (Java 9+) ***
+            final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+            // first check if Unsafe has the right method, otherwise we can give up
+            // without doing any security critical stuff:
+            final MethodHandle unmapper = lookup.findVirtual(unsafeClass, "invokeCleaner",
+                    methodType(void.class, ByteBuffer.class));
+            // fetch the unsafe instance and bind it to the virtual MH:
+            final Field f = unsafeClass.getDeclaredField("theUnsafe");
+            f.setAccessible(true);
+            final Object theUnsafe = f.get(null);
+            return newBufferCleaner(ByteBuffer.class, unmapper.bindTo(theUnsafe));
         } catch (SecurityException se) {
             LOG.error(
                     "Unmapping is not supported because of missing permissions. Please grant at least the following permissions: RuntimePermission(\"accessClassInPackage.sun.misc\") "
